# sat_dynamics

./: .gitignore  AttitudeControlSystem.cpp  AttitudeControlSystem.h  CMakeLists.txt  Constants.h  SatelliteModel.cpp  SatelliteModel.h  main.cpp  plot.py  readme.md  readme.me  satellite_data.csv
functions/: add_vectors.cpp  add_vectors.h  cartesian_to_keplerian.cpp  cartesian_to_keplerian.h  cross_product.cpp  cross_product.h  dot_product.cpp  dot_product.h  keplerian_to_cartesian.cpp  keplerian_to_cartesian.h  magnitude.cpp  magnitude.h  multiply_vector.cpp  multiply_vector.h  scale_vector.cpp  scale_vector.h  subtract_vectors.cpp  subtract_vectors.h
